- Fix: Only display 1 format for geo coordinates
- Feature: PDF for article
- Fix: Link to original article on Wikipedia (needed underscore escaping)
- Fix Table padding bug (Zero Width space characters!) - German submarine U-48 (1939)
- Fix: Tables don't support Row spans
- Fix: Collect reference links from table captions
- Fix: Navigation suggestions not rendered if more than 1 hyperlink in a sentence
- Fix: attempt to support tables with malformed colspan/rowspan values (iPod article)
- Fix: properly render tables with incorrect/excessive colspan values (iPod article)
- Feature: Support timelines (extract the image, properly extract article links from MAP tag)
- Fix: exclude navigation sections from section's references
- Fix: exclude fragement from article title when collecting references
- Feature: Speed up views with Disk cache for Wikipedia content
    (especially important for sub-pages like gallery, references, since that needs would refetch article JSON)
- Feature: Sharper looking math formulas by referencing Wikipedia's PNGs directly
- Feature: Add White background to transparent images for better reading on clients with dark mode
- Feature: Serve media with proper extension, mimetype, for better downloading (easier to tell if something is an animated GIF, etc)
- Fix: Newlines in captions (Project Gutenberg article)
- Feature: support image maps on all images, not just timelines (Broadway theatre article)
- Fix: complete parser rewrite that supports more content without special case handling, and fixes rendering errors
- Feature: Includes search snippet in search results
- Feature: Use the 1.5x image if 2x image is not available
- Feature: Support for Image Galleries (images would show up using generic media finder, but wasn't getting the appropriate caption)
- Feature: Add links to search for other pages about an article
- Feature: Added Featured Content view from front page of Wikipedia. Contains Featured Article and most popular pages