@@ -18,6 +18,7 @@ namespace Gemipedia.Cgi
             router.OnRequest("/refs", RouteHandler.ViewRefs);
             router.OnRequest("/featured", RouteHandler.ViewFeatured);
             router.OnRequest("/geo", RouteHandler.ViewGeo);
+            router.OnRequest("/latlon", RouteHandler.SearchLatLon);
             router.OnRequest("", RouteHandler.Welcome);
             router.ProcessRequest();
         }
